@@ -1,3 +1,15 @@
+2012-11-10  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r134069.
+        http://trac.webkit.org/changeset/134069
+        https://bugs.webkit.org/show_bug.cgi?id=101852
+
+        "It is a wrong way to fix the problem. See discussions in bug
+        96614" (Requested by 1JTAAPQFJ on #webkit).
+
+        * bindings/js/JSDictionary.cpp:
+        (WebCore::JSDictionary::getWithUndefinedOrNullCheck):
+
 2012-11-10  Mike West  <mkwst@chromium.org>
 
         Web Inspector: Multiple '%c' formatting options should all have effect.
